fix dropdown z-index

--- a/src/TPCTrainco.Umbraco/assets/css/main.css
+++ b/src/TPCTrainco.Umbraco/assets/css/main.css
@@ -2006,7 +2006,7 @@ tbody.collapse.in {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1300;
   display: none;
   float: left;
   min-width: 160px;
@@ -5309,7 +5309,7 @@ ul.pagination-btn-wrapper li {
   position: fixed;
   top: 35px;
   width: 100%;
-  z-index: 999;
+  z-index: 1300;
   height: 50px;
 }
 
