--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -33,7 +33,7 @@
   position: fixed;
   top: 35px;
   width: 100%;
-  z-index: 999;
+  z-index: 1300;
   height: 50px;
   @include tablet-landscape-and-up {
     height: 80px;
